--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<meta charset="utf-8">
 		<title>精品小屋</title>
 	</head>
-	<body style="size: a3;">
+	<body>
 		hello word！
+		<input type="image" src="https://s1.328888.xyz/2022/08/11/6OfwB.jpg" />
 	</body>
 </html>
